fix video autoplay. add margin to post button. fix layout overflow.

--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -10,9 +10,10 @@
 }
 
 .main-container {
-  display: grid;
-
-  width: 100%;
+  display: flex;
+  justify-content: center;
 
   flex: 1;
+
+  width: 100%;
 }
