--- a/src/app/not-found.module.scss
+++ b/src/app/not-found.module.scss
@@ -2,8 +2,6 @@
 @use '@/styles/value' as value;
 
 .container {
-  justify-self: center;
-
   margin-top: value.$large-margin * 2;
 }
 
