--- a/src/app/posts/page.module.scss
+++ b/src/app/posts/page.module.scss
@@ -3,8 +3,6 @@
 @use '@/styles/value' as value;
 
 .container {
-  position: relative;
-
   @include mixin.fixed-width-container-styles;
 
   display: flex;
