--- a/src/components/home/LandingSection/styles.module.scss
+++ b/src/components/home/LandingSection/styles.module.scss
@@ -33,10 +33,6 @@
 }
 
 .video {
-  position: absolute;
-  top: 0;
-  left: 0;
-
   object-fit: cover;
 
   pointer-events: none;
